# R-Type--in-creation-

./: CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  Readme.md
Client/Includes/: Assets.h  BulletControlSystem.hpp  Button.h  Game.h  Graphics.h  Menu.h  MonsterControlSystem.hpp  PlayerControlSystem.hpp  WindowManaging.h  client.hpp
Client/Src/: Assets.cpp  Button.cpp  Game.cpp  Graphics.cpp  Menu.cpp  WindowManaging.cpp  main.cpp
Client/Src/Components/: Position.h
Client/Src/Systems/: BulletControlSystem.cpp  MonsterControlSystem.cpp  PlayerControlSystem.cpp
Documentation/: Protocole.txt
Documentation/html/: _assets_8h_source.html  _bullet_control_system_8hpp_source.html  _button_8h_source.html  _colors_8hpp_source.html  _game_8h_source.html  _graphics_8h_source.html  _menu_8h_source.html  _monster_control_system_8hpp_source.html  _player_control_system_8hpp_source.html  _position_8h_source.html  _window_managing_8h_source.html  annotated.html  class_assets-members.html  class_assets.html  class_boss1-members.html  class_boss1.html  class_bullet-members.html  class_bullet.html  class_button-members.html  class_button.html  class_game-members.html  class_game.html  class_graphics-members.html  class_graphics.html  class_menu-members.html  class_menu.html  class_mob1-members.html  class_mob1.html  class_monster-members.html  class_monster.html  class_player-members.html  class_player.html  class_ultimate_bullets-members.html  class_ultimate_bullets.html  class_window_managing-members.html  class_window_managing.html  classes.html  dir_3e05ee924b2bf32f7f7ae33a6c408870.html  dir_549aca4deff073b0d9172b85561c9983.html  dir_922c588100a187620fdc1533bc178f73.html  (+8 more)
Documentation/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_a.js  all_b.js  classes_1.js  classes_6.js  functions_0.js  functions_3.js  functions_6.js  searchdata.js
Documentation/latex/: _assets_8h_source.tex  _bullet_control_system_8hpp_source.tex  _button_8h_source.tex  _colors_8hpp_source.tex  _game_8h_source.tex  _graphics_8h_source.tex  _menu_8h_source.tex  _monster_control_system_8hpp_source.tex  _player_control_system_8hpp_source.tex  _position_8h_source.tex  _window_managing_8h_source.tex  annotated.tex  class_assets.tex  class_boss1.tex  class_bullet.tex  class_button.tex  class_game.tex  class_graphics.tex  class_menu.tex  class_mob1.tex  class_monster.tex  class_player.tex  class_ultimate_bullets.tex  class_window_managing.tex  files.tex  refman.tex  struct_position.tex
Server/: main.cpp
